--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 ./terraform/*.tfstate*.terraform/
-./terraform/.terraform/
+./terraform/.terraform/terraform.tfstate
+terraform.tfstate.backup
+.terraform/
